kustomize/overlays/multi-cluster/spoke/patches/gateway-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: incident-api-gateway
  namespace: incident-api
spec:
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: incidents.sandbox4020.opentlc.com
      allowedRoutes:
        namespaces:
          from: Same
