kustomize/overlays/multi-cluster/spoke/patches/httproute-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: incident-api-route
  namespace: incident-api
spec:
  hostnames:
    - incidents.sandbox4020.opentlc.com
